[gd_scene load_steps=6 format=2]

[ext_resource path="res://Furniture/Assets/table.png" type="Texture" id=1]
[ext_resource path="res://Furniture/DinnerWare.tscn" type="PackedScene" id=2]
[ext_resource path="res://Interactions/Table.gd" type="Script" id=3]
[ext_resource path="res://SFX/eating.ogg" type="AudioStream" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 13.5
height = 31.5

[node name="Table" type="StaticBody2D" groups=[
"container",
]]
collision_layer = 3
collision_mask = 3
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.75, -24 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.0936432, -16.9017 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="DinnerWare" parent="." instance=ExtResource( 2 )]
position = Vector2( -13.75, -24.125 )

[node name="DinnerWare2" parent="." instance=ExtResource( 2 )]
position = Vector2( 15, -24.25 )

[node name="ItemPosition" type="Position2D" parent="."]
position = Vector2( 14.0068, -20.4893 )

[node name="EffectAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 8.0
[connection signal="finished" from="EffectAudio" to="." method="_on_EffectAudio_finished"]
